# SpiffWorkflow

libs/spiffworkflow-core/: pyproject.toml
